LLMAI-45: Create a new Java API for chat models
* Switch to java.net.http.HttpClient for the possibly better interface.
* Properly close the request to the LLM when the client closes the connection, at least for streaming requests.
* Try forwarding the results faster with a small buffer, but this doesn't seem to work as expected.